--- a/configs/acme-arietta.dts
+++ b/configs/acme-arietta.dts
@@ -73,12 +73,14 @@
 				status = "okay";
 				cs-gpios = <&pioA 8 0>, <&pioA 0 0>, <&pioA 31 0>, <&pioA 30 0>;
 				ethernet@0 {
-					compatible = "spidev";
-					spi-max-frequency = <5000000>;	    
-					reg = <0>;
+					compatible = "microchip,enc28j60";
+					reg = <0>;	
+					spi-max-frequency = <1000000>;	
+					interrupt-parent = <&pioA>;
+					interrupts = <25 0x02>;
 				};
 
-				can@0 {
+				can@2 {
 	      			      compatible = "microchip,mcp2515";
 	      			      reg = <2>;
 	      			      spi-max-frequency = <10000000>;	  
@@ -87,7 +89,7 @@
 	      			      interrupts = <24 0x2>; 
 				};
 
-				at25@0 {
+				at25@3 {
 				       compatible = "atmel,a t25", "st,m95256";
 				       reg = <3>;
 				       spi-max-frequency = <5000000>;
@@ -140,7 +142,8 @@
 				status = "okay";
 			};
 			usb2: gadget@f803c000 {
-				status = "okay";
+			        /* i use the usb port for wifi */ 
+				//status = "okay";
 			};
 			dbgu: serial@fffff200 {
 				status = "okay";
@@ -174,12 +177,6 @@
 			linux,default-trigger = "heartbeat";
 		};
 
-		/* caramel led */
-		//caramel_led {
-		//	label = "caramel_led";
-		//	gpios = <&pioA 22 GPIO_ACTIVE_HIGH>; /* PA22 */
-		//	linux,default-trigger = "heartbeat";
-		//};
 	};
 	onewire@0 {
 		compatible = "w1-gpio";
