Changes:	some restructure and a lot of small updates 		add linux-stable

--- a/external/.gitignore
+++ b/external/.gitignore
@@ -1,10 +1,7 @@
 # ignore toolchain and other bin stuff -> distributed over sourceforge
-v[1-9]
-v[1-9].tgz
-arm926_sdk_v[1-9].tgz
+at91bootstrap
+rpusbdisp
 *.tgz
 *.gz
 *.bz2
 *.xz
-modules_3.19
-toolchain
