Changes:	update .gitignore to ignore all kernel and modules

--- a/.gitignore
+++ b/.gitignore
@@ -6,11 +6,7 @@ arm926_sdk_v[1-9].tgz
 *.gz
 *.bz2
 *.xz
-linux-3.19.1
-modules_3.19.1
-linux-3.19.2
-modules_3.19.2
-linux-3.18.9
-modules_3.18.9
+linux-*
+modules_*
 toolchain
 linux-stable
