--- a/configs/acme-arietta.dts
+++ b/configs/acme-arietta.dts
@@ -78,6 +78,8 @@
 					spi-max-frequency = <1000000>;	
 					interrupt-parent = <&pioA>;
 					interrupts = <25 0x02>;
+					/* PC3 - pin33 */	
+				 	reset-gpios = <&pioC 3 0>; 
 				};
 
 				can@2 {
