--- a/external/makefile
+++ b/external/makefile
@@ -1,6 +1,7 @@
 # only for cleaning :-)
 
 MODULES = at91bootstrap
+MODULES_TO_UPDATE = $(shell ls -d */ | cut -f1 -d'/')
 
 .PHONY: all
 all: 
@@ -12,3 +13,11 @@ clean:
 	for dir in $(MODULES); do (cd $$dir && $(MAKE) $@); done
 
 distclean: clean
+
+#
+# update all cloned repos
+#
+.PHONY: update_all
+update_all:
+	rm -f *~ *.o
+	for dir in $(MODULES_TO_UPDATE); do (cd $$dir && git pull); done
