Changes:	add a lot of addtions to the sdk 		prepare the new version v3 which add sysroot support

--- a/external/makefile
+++ b/external/makefile
@@ -1,6 +1,8 @@
-# only for cleaning :-)
+#
+# ${ARMEL_HOME}/external/makefile
+#
 
-MODULES = $(shell ls -d */ | cut -f1 -d'/' | grep -v rpusbdisp | grep -v xenomai-3)
+MODULES = $(shell ls -d */ | cut -f1 -d'/' | grep -v OLINUXINO | grep -v xenomai-3)
 MODULES_TO_UPDATE = $(shell ls -d */ | cut -f1 -d'/')
 
 .PHONY: all
@@ -21,3 +23,30 @@ distclean: clean
 update_all:
 	rm -f *~ *.o
 	for dir in $(MODULES_TO_UPDATE); do (cd $$dir && git pull); done
+
+#
+# clone a single external repo (on the device)
+#
+get_at91bootstrap::
+	($(ARMEL_HOME)/bin/get_external_git_repos.sh -r "at91bootstrap" -p "http")
+
+get_linux-linus::
+	($(ARMEL_HOME)/bin/get_external_git_repos.sh -r "linus" -p "http")
+
+get_rt-tests::
+	($(ARMEL_HOME)/bin/get_external_git_repos.sh -r "rt-tests" -p "http")
+
+get_ipipe::
+	($(ARMEL_HOME)/bin/get_external_git_repos.sh -r "ipipe" -p "http")
+
+get_xenomai::
+	($(ARMEL_HOME)/bin/get_external_git_repos.sh -r "xenomai" -p "http")
+
+get_olimex-docs::
+	($(ARMEL_HOME)/bin/get_external_git_repos.sh -r "olimex-docs" -p "http")
+
+get_uboot::
+	($(ARMEL_HOME)/bin/get_external_git_repos.sh -r "uboot" -p "http")
+
+get_mydriver::
+	($(ARMEL_HOME)/bin/get_external_git_repos.sh -r "mydriver" -p "http")
