Changes:	fix wrong adds to the repo

--- a/external/.gitignore
+++ b/external/.gitignore
@@ -5,12 +5,12 @@ linux
 ipipe
 xenomai-3
 rt-tests
-OLINUXINO
-mydriver
-u-boot
-u-boot.git
-mydriver.git
-OLINUXINO.git
+#OLINUXINO
+#mydriver
+#u-boot
+#u-boot.git
+#mydriver.git
+#OLINUXINO.git
 at91bootstrap.git
 rpusbdisp.git
 linux.git
