Changes:	add skeleton for the arm926 sdk doc 		adapt MANPATH and CDPATH 		some updates

--- a/Documentation/makefile
+++ b/Documentation/makefile
@@ -1,13 +1,14 @@
 # only for cleaning 
 
+MODULES = $(shell ls -d */ | cut -f1 -d'/')
+DOCS = doc_arm926sdk
+
 all:: 
 	@echo Cheers
 
 clean::
-	rm -f *~ 
-	rm -f invalid/*~
-	rm -f pdf/*
-	rm -f html/*
+	rm -f *~
+	for dir in $(MODULES); do (cd $$dir && $(MAKE) $@); done
 
 distclean: clean
 
@@ -15,5 +16,13 @@ docs::
 	@echo "+----------------------------------------------------------+"
 	@echo "|                                                          |"
 	@echo "|                      Build docs                          |"
+	@echo "|                                                          |"
+	@echo "+----------------------------------------------------------+"
+	for dir in $(DOCS); do (cd $$dir && $(MAKE) $@); done
+
+man::
+	@echo "+----------------------------------------------------------+"
+	@echo "|                                                          |"
+	@echo "|                  Install man pages                       |"
 	@echo "|                                                          |"
 	@echo "+----------------------------------------------------------+"
