--- a/templates/makefile
+++ b/templates/makefile
@@ -1,11 +1,14 @@
 # only for cleaning :-)
 
+MODULES = $(shell ls -d */ | cut -f1 -d'/')
+
 .PHONY: all
 all: 
 	@echo Cheers
 
 .PHONY: clean
 clean:
-	rm -f *~ 
+	rm -f *~
+	for dir in $(MODULES); do (cd $$dir && $(MAKE) $@); done
 
 distclean: clean
