Re-organisation of the toolchain naming -> see NEWS for more info Add can-utils and libsocketcan to get_external_git_repos.sh Add host_ handling to get_toolchain.sh

--- a/external/.gitignore
+++ b/external/.gitignore
@@ -8,6 +8,10 @@ rt-tests
 OLINUXINO
 mydriver
 u-boot
+can-utils
+libsocketcan
+libsocketcan.git
+can-utils.git
 u-boot.git
 mydriver.git
 OLINUXINO.git
