remove old doc/man stuff add dir for arietta and move content to it move bin to scripts some more minor changes

--- a/arietta/configs/makefile
+++ b/arietta/configs/makefile
@@ -1,4 +1,4 @@
-# only for cleaning :-)
+# only for cleaning 
 
 .PHONY: all
 all: 
@@ -6,6 +6,6 @@ all:
 
 .PHONY: clean
 clean:
-	rm -f *~ 
+	rm -f *~ .*~
 
 distclean: clean
