add some useful docu some cleanups in docu fix a lot of bugs in get_external_repos.sh remove checksum.md5 -> changed checksum to sh256 some pulls ago some smaller changes/cleanups

--- a/external/.gitignore
+++ b/external/.gitignore
@@ -10,8 +10,19 @@ mydriver
 u-boot
 can-utils
 libsocketcan
+void-packages
+jailhouse
+documents
+ee
+can4linux-code
+libbaalue
+libbaalue.git
+baalue.git
+baalue
 linux-lin
 linux-lin.git
+baalued.git
+baalued
 libsocketcan.git
 can-utils.git
 u-boot.git
@@ -23,6 +34,11 @@ linux.git
 ipipe.git
 xenomai-3.git
 rt-tests.git
+void-packages.git
+jailhouse.git
+documents.git
+sllin
+sllin.git
 *.tgz
 *.gz
 *.bz2
