--- a/external/makefile
+++ b/external/makefile
@@ -33,31 +33,31 @@ update_all:
 # clone a single external repo (on the device)
 #
 get_at91bootstrap::
-	($(ARMEL_HOME)/bin/get_external_git_repos.sh -r "at91bootstrap" -p "http")
+	($(ARMEL_HOME)/scripts/get_external_git_repos.sh -r "at91bootstrap" -p "http")
 
 get_linux-linus::
-	($(ARMEL_HOME)/bin/get_external_git_repos.sh -r "linus" -p "http")
+	($(ARMEL_HOME)/scripts/get_external_git_repos.sh -r "linus" -p "http")
 
 get_rt-tests::
-	($(ARMEL_HOME)/bin/get_external_git_repos.sh -r "rt-tests" -p "http")
+	($(ARMEL_HOME)/scripts/get_external_git_repos.sh -r "rt-tests" -p "http")
 
 get_ipipe::
-	($(ARMEL_HOME)/bin/get_external_git_repos.sh -r "ipipe" -p "http")
+	($(ARMEL_HOME)/scripts/get_external_git_repos.sh -r "ipipe" -p "http")
 
 get_xenomai::
-	($(ARMEL_HOME)/bin/get_external_git_repos.sh -r "xenomai" -p "http")
+	($(ARMEL_HOME)/scripts/get_external_git_repos.sh -r "xenomai" -p "http")
 
 get_uboot::
-	($(ARMEL_HOME)/bin/get_external_git_repos.sh -r "uboot" -p "http")
+	($(ARMEL_HOME)/scripts/get_external_git_repos.sh -r "uboot" -p "http")
 
 get_mydriver::
-	($(ARMEL_HOME)/bin/get_external_git_repos.sh -r "mydriver" -p "http")
+	($(ARMEL_HOME)/scripts/get_external_git_repos.sh -r "mydriver" -p "http")
 
 get_can-utils::
-	($(ARMEL_HOME)/bin/get_external_git_repos.sh -r "can-utils" -p "http")
+	($(ARMEL_HOME)/scripts/get_external_git_repos.sh -r "can-utils" -p "http")
 
 get_libsocketcan::
-	($(ARMEL_HOME)/bin/get_external_git_repos.sh -r "libsocketcan" -p "git")
+	($(ARMEL_HOME)/scripts/get_external_git_repos.sh -r "libsocketcan" -p "git")
 
 get_libbaalue::
 	($(ARMEL_HOME)/scripts/get_external_git_repos.sh -r "libbaalue" -p "https")
@@ -66,4 +66,7 @@ get_baalued::
 	($(ARMEL_HOME)/scripts/get_external_git_repos.sh -r "baalued" -p "https")
 
 get_sllin::
-	($(ARMEL_HOME)/bin/get_external_git_repos.sh -r "sllin" -p "https")
+	($(ARMEL_HOME)/scripts/get_external_git_repos.sh -r "sllin" -p "https")
+
+get_led-dot-clock::
+	($(ARMEL_HOME)/scripts/get_external_git_repos.sh -r "clock" -p "https")
