--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,19 @@
 # Debug files
 *.dSYM/
 
+# http://www.gnu.org/software/automake
+Makefile.in
+
+# http://www.gnu.org/software/autoconf
+/autom4te.cache
+/aclocal.m4
+/compile
+/configure
+/depcomp
+/install-sh
+/missing
+/stamp-h1
+
 # arm926_sdk specifics
 toolchain
 host
