--- a/kernel/makefile
+++ b/kernel/makefile
@@ -1,11 +1,32 @@
-# only for cleaning 
+#
+# makefile
+#
 
 .PHONY: all
 all: 
-	@echo Cheers
+	@echo "+----------------------------------------------------------+"
+	@echo "|                                                          |"
+	@echo "|                  Nothing to build                        |"
+	@echo "|                                                          |"
+	@echo "+----------------------------------------------------------+"
+	@echo "| make get_latest_kernel  -> download latest kernel version|"
+	@echo "| make clean              -> clean all dir/subdirs         |"
+	@echo "+----------------------------------------------------------+"	
 
 .PHONY: clean
 clean:
 	rm -f *~
 
 distclean: clean
+
+#
+# download latest supported kernel version as tarball and install it to
+# ./kernel/linux-$ARMEL_KERNEL_VER
+#
+get_latest_kernel:: 
+	@echo "+----------------------------------------------------------+"
+	@echo "|                                                          |"
+	@echo "|        Download latest supported kernel version          |"
+	@echo "|                                                          |"
+	@echo "+----------------------------------------------------------+"
+	($(ARMEL_HOME)/scripts/get_latest_linux_kernel.sh)
