some smaller updates start preparation for new architecture like a20_sdk.git

--- a/external/makefile
+++ b/external/makefile
@@ -35,20 +35,11 @@ update_all:
 get_at91bootstrap::
 	($(ARMEL_HOME)/scripts/get_external_git_repos.sh -r "at91bootstrap" -p "http")
 
-get_linux-linus::
-	($(ARMEL_HOME)/scripts/get_external_git_repos.sh -r "linus" -p "http")
-
-get_rt-tests::
-	($(ARMEL_HOME)/scripts/get_external_git_repos.sh -r "rt-tests" -p "http")
-
 get_ipipe::
 	($(ARMEL_HOME)/scripts/get_external_git_repos.sh -r "ipipe" -p "http")
 
 get_xenomai::
 	($(ARMEL_HOME)/scripts/get_external_git_repos.sh -r "xenomai" -p "http")
-
-get_uboot::
-	($(ARMEL_HOME)/scripts/get_external_git_repos.sh -r "uboot" -p "http")
 
 get_mydriver::
 	($(ARMEL_HOME)/scripts/get_external_git_repos.sh -r "mydriver" -p "http")
@@ -56,21 +47,9 @@ get_mydriver::
 get_can-utils::
 	($(ARMEL_HOME)/scripts/get_external_git_repos.sh -r "can-utils" -p "http")
 
-get_libsocketcan::
-	($(ARMEL_HOME)/scripts/get_external_git_repos.sh -r "libsocketcan" -p "git")
-
-get_libbaalue::
-	($(ARMEL_HOME)/scripts/get_external_git_repos.sh -r "libbaalue" -p "https")
-
-get_baalued::
-	($(ARMEL_HOME)/scripts/get_external_git_repos.sh -r "baalued" -p "https")
-
-get_sllin::
-	($(ARMEL_HOME)/scripts/get_external_git_repos.sh -r "sllin" -p "https")
-
 get_led-dot-clock::
 	($(ARMEL_HOME)/scripts/get_external_git_repos.sh -r "clock" -p "https")
 
-get_my-sllin::
-	($(ARMEL_HOME)/scripts/get_external_git_repos.sh -r "my_sllin" -p "git")
+get_void-packages::
+	($(ARMEL_HOME)/scripts/get_external_git_repos.sh -r "void-packages" -p "https")
 
